src/tests/fixtures/directives/undefinedDirectiveWithArgs.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlQueryField
 * @gqlAnnotate myDirective(someArg: "someValue")
 */
export function myQueryField(): string {
  return "myQueryField";
}

-----------------
OUTPUT
-----------------
GraphQL request:1:1 - error: Unknown directive "@myDirective".

1 @myDirective(someArg: "someValue")
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
